<resources>
    <string name="app_name">Barista</string>

    <string name="facebook_app_id">180639749039848</string>
    <string name="message_fb_session_cancel">Inicio de sesión cancelado</string>
    <string name="message_fb_session_error">Ocurrió un error al iniciar sesión</string>
    <string name="permission_fb_email">email</string>
    <string name="permission_fb_birthday">user_birthday</string>
    <string name="request_fb_id">id</string>
    <string name="request_fb_email">email</string>
    <string name="request_fb_first_name">first_name</string>
    <string name="request_fb_last_name">last_name</string>
    <string name="request_fb_birthday">birthday</string>

    <string name="checkin_title">Elige tu cafe</string>
    <string name="button_checkin">Check-in!</string>
    <string name="button_update_checkin">Actualizar</string>

    <string name="label_title_states_spinner">Estado representativo</string>
    <string name="label_title_methods_spinner">Método de preparación</string>
    <string-array name="methods_arrays">
        <item>Método de preparación</item>
        <item>Expresso</item>
        <item>Americano</item>
        <item>Goteo</item>
        <item>Prensa</item>
        <item>Sifón</item>
        <item>Otro</item>
    </string-array>
    <string name="label_title_checkin">Cuéntanos sobre tu café</string>
    <string name="placeholderOrigin">Municipio</string>
    <string name="placeholderPrice">Precio</string>
    <string name="placeholderNote">Notas</string>labelMethod
    <string name="toastCheckinSuccess">Check-in Relizado!!!</string>
    <string name="toastCheckinFail">Ups!! ocurrio un error</string>
    <string name="title_activity_my_check_ins">MyCheckInsActivity</string>

    <string name="label_origin">Origen:</string>
    <string name="label_price">Precio:</string>
    <string name="label_note">Notas:</string>

    <string name="user_layout">Username:</string>
    <string name="password_layout">Password:</string>
    <string name="confirm_password_layout">Confirmar contraseña</string>
    <string name="button_registration">Registrate</string>
    <string name="button_login">Iniciar Sesión</string>
    <string name="com_facebook_loginview_log_in_button_long">Entra con Facebook</string>
    <string name="toastLoginSuccess">Username and Password correct!</string>
    <string name="toastLoginFail">Username or Password incorrect!</string>
    <string name="toastRegistrationSuccess">Username and Password correct!</string>
    <string name="toastRegistrationFail">Correo o contraseña inválidos</string>
    <string name="toastInit">Presiona el botón café para hacer el primer check-in</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="login_textView_message">¿No tienes cuenta? <u>¡Regístrate!</u></string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="profile_first_name">Nombre</string>
    <string name="profile_last_name">Apellidos</string>
    <string name="profile_username">Username</string>
    <string name="title_profile">Your profile</string>
    <string name="profile_mesage_add_photo">Add a cover Photo</string>
    <string name="circulo_del_sabor">Circulo del Sabor</string>
    <string name="crear_circulo">Crear Circulo</string>
    <string name="dulzura_label">Dulzura</string>
    <string name="acidez_label">Acidez</string>
    <string name="floral_label">Floral</string>
    <string name="especiado_label">Especiado</string>
    <string name="salado_label">Salado</string>
    <string name="frutos_rojos_label">Frutos Rojos</string>
    <string name="limpieza_label">Limpieza</string>
    <string name="cuerpo_label">Cuerpo</string>
    <string name="caramelo_label">Caramelo</string>
    <string name="chocolate_label">Chocolate</string>
    <string name="agregar_circulo_del_sabor">Agregar Circulo del Sabor</string>
    <string name="dulzura_progress_bar">Dulzura</string>
    <string name="acidez_progress_bar">Acidez</string>
    <string name="furtos_rojos_progress_bar">Furtos Rojos</string>
    <string name="caramelo_progress_bar">Caramelo</string>
    <string name="chocolate_progress_bar">Chocolate</string>
    <string name="floral_progress_bar">Floral</string>
    <string name="salado_progress_bar">Salado</string>
    <string name="especiado_progress_bar">Especiado</string>
    <string name="limpieza_progress_bar">Limpieza</string>
    <string name="cuerpo_progress_bar">Cuerpo</string>
    <string name="text_message">Text Message</string>
    <string name="comment_error_message">Ocurrio un error al comentar</string>
    <string name="template_checkins">0 \n Checkins</string>
    <string name="template_friends">0 \n Amigos</string>
    <string name="menu_search">Buscar</string>
    <string name="something">Something</string>
    <string name="placeHolderNameBarista">Nombre del Barista</string>
    <string name="baristum">Agregar Barista</string>
    <string name="barista_label">Barista</string>
    <string name="font_blacksword">Blacksword.otf</string>
    <string name="menu_accept">Aceptar</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="email">Correo</string>
    <string name="save_profile">Actualizar perfil</string>
    <string name="add_venue">Agregar ubicacion</string>
    <string name="message_uploading_photo">Uploading photo...</string>
    <string name="message_sharing_photo">Sharing photo...</string>
    <string name="message_add_photo">Agrega una foto a tu Check In"</string>
    <string name="label_title_note_dialog">Describe tu experiencia</string>
    <string name="hint_note_dialog">Deja una nota...</string>
    <string name="label_share_button">Compartir en Facebook</string>
    <string name="message_saved_data">Datos guardados correctamente</string>
    <string name="url_facebook_photo">https://graph.facebook.com/%s/picture?width=500</string>
    <string name="hint_search_place">Selecciona un lugar</string>
    <string name="label_check_in">Check In</string>
    <string name="label_add_place">Agrega un lugar</string>
    <string name="title_circle_fragment">CÍRCULO DEL SABOR</string>
    <string name="url_barista_profile">http://users.barist.coffee/#profile/%s</string>
    <string name="title_barista_photo">Barista photo by %s</string>
    <string name="label_update">Actualizar</string>
    <string name="hint_price">$$</string>
    <string name="hint_barista_name">JJ</string>
    <string name="hint_note_check_in">&quot;¡Registra, evalúa y comparte tu experiencia!&quot;</string>
</resources>
