<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <EditText
        android:id="@+id/input_username"
        style="@style/EditText.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_user"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/userame"/>

    <EditText
        android:id="@+id/input_password"
        style="@style/EditText.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_password"
        android:drawableStart="@drawable/ic_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/button_login"/>

    <TextView
        android:id="@+id/message_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/login_textView_message"
        android:gravity="center_horizontal"/>

</LinearLayout>