<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/method_label"
            android:text="@string/label_method"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.05"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/method_data"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.05"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/origin_label"
            android:text="@string/label_origin"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.05"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/origin_data"
            android:layout_weight="0.06"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/price_label"
            android:text="@string/label_price"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.05"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/price_data"
            android:layout_weight="0.07"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/note_label"
            android:text="@string/label_note"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.05"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/note_data"
            android:layout_weight="0.08"/>

    </LinearLayout>
</LinearLayout>