<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitEnd"
            android:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#62000000"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                app:titleTextColor="@color/white">

            </android.support.v7.widget.Toolbar>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:minHeight="@dimen/height_profile_info"
                android:orientation="vertical"
                android:padding="@dimen/spacing_xlarge">


                <ImageView
                    android:layout_width="@dimen/size_image_profile"
                    android:layout_height="@dimen/size_image_profile"
                    app:srcCompat="@drawable/ic_profile"/>

                <TextView
                    android:id="@+id/usernameProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="Username"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </LinearLayout>


        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/inputNameProfile"
            style="@style/EditText.Icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/profile_first_name"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/inputLastNameProfile"
            style="@style/EditText.Icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/profile_last_name"
            android:padding="16dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/checkinsList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/template_checkins"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/friendsList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/template_friends"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>