<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fgm_checkin_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/preview_checkin"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="top"
            android:scaleType="centerCrop"
            android:src="@drawable/coffee" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="260dp"
                android:layout_height="34dp"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/label_title_checkin"
                android:textSize="@dimen/font_xlarge" />

            <Spinner
                android:id="@+id/methodSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:entries="@array/methods_arrays"
                android:prompt="@string/label_title_spinner"
                android:spinnerMode="dropdown" />

            <ImageView
                android:id="@+id/icn_originField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/methodSpinner"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@drawable/ic_origin" />

            <EditText
                android:id="@+id/originField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/methodSpinner"
                android:layout_marginStart="4dp"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_toEndOf="@id/icn_originField"
                android:hint="@string/placeholderOrigin"
                android:singleLine="true"
                android:textSize="@dimen/font_large" />

            <ImageView
                android:id="@+id/icn_priceField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/originField"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@drawable/ic_price" />

            <EditText
                android:id="@+id/priceField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/originField"
                android:layout_marginStart="4dp"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_toEndOf="@id/icn_priceField"
                android:hint="@string/placeholderPrice"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textSize="@dimen/font_large" />

            <TextView
                android:id="@+id/venue_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/priceField"
                android:layout_marginTop="@dimen/spacing_large"
                android:drawablePadding="6dp"
                android:drawableStart="@drawable/ic_pin"
                android:gravity="center_vertical" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/spacing_large"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_photo_checkin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_checkin_camera" />

        <ImageView
            android:id="@+id/btnAddVenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:src="@drawable/ic_get_venue" />

        <Button
            android:id="@+id/btnCheckIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/button_checkin"
            android:textColor="@color/white" />
    </LinearLayout>
</FrameLayout>

